logex 2.0.0 (2014-12-07)
 * removed LINE_NUMBERS parameter => always show line numbers when showing
 source
 * always show locals when showing source
 * when showing source, show source for all relevant frames

logex 1.0.0 (2014-12-05)
 * initial release