@@ -1,8 +1,13 @@
 logex 2.0.0 (2014-12-07)
+ * whew! many changes ;)
  * removed LINE_NUMBERS parameter => always show line numbers when showing
- source
+   source
  * always show locals when showing source
  * when showing source, show source for all relevant frames
+ * shorten source view if one decorated function calls another
+ * added some examples
+ * handle our own exceptions, i.e. during generation of the log message
+ * fix default values for parameters
 
 logex 1.0.0 (2014-12-05)
  * initial release
